Update Crypto Importer v2.ipynb

--- a/Crypto Importer v2.ipynb
+++ b/Crypto Importer v2.ipynb
@@ -283,6 +283,7 @@
     "    df_totals = df_reorder.copy()\n",
     "    #Sort final dataframe to give Total row at the top and reset index\n",
     "    df_tracker=df_totals.sort_values(by=['P/L'],ascending=False)\n",
+    "    #Round values to 2 d.p.\n",
     "    df_tracker = df_tracker.round(2)\n",
     "    return df_tracker"
    ]
