Update Crypto Importer v2.ipynb

--- a/Crypto Importer v2.ipynb
+++ b/Crypto Importer v2.ipynb
@@ -18,9 +18,8 @@
     "import pandas as pd\n",
     "#use popular binance exchange API\n",
     "from binance.client import Client\n",
-    "api_key ='EYLz9h7MwAVxmA36GfF8xgEOnds4AuAD1jLRbGEhzuQHwoLlKw7YDmMKR9hGPMUf'\n",
-    "#Do not share secret api key with anyone. The below key is a dummy one and will not work\n",
-    "api_secret = 't99mZ9hTRw9Sjjk9MKa9VkcDVUmbsVerWEa3JKw13IXvrL365ioGxCsCyySbEy1X'\n",
+    "api_key ='MyKey'\n",
+    "api_secret = 'MyKey'\n",
     "client = Client(api_key, api_secret)\n",
     "print(\"logged in\")"
    ]
